feat: Get image list
